--- a/src/app/components/ricerca-pesce/ricerca-pesce.component.html
+++ b/src/app/components/ricerca-pesce/ricerca-pesce.component.html
@@ -14,7 +14,7 @@
   </ion-row>
   <ion-row>
     <ion-col>
-      <ion-item color="secondary">
+      <ion-item>
         <ion-checkbox [(ngModel)]="modelSearch.validoVasca" name="validoVasca" #validoVasca="ngModel"></ion-checkbox>
         <ion-label classclass="ion-text-center">Valido per la vasca </ion-label>
       </ion-item>
