--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -2,10 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 50px;
 
     ion-img {
         width: 150px;
         height: 150px;
     }
+}
+
+.secondary-color {
+    background: #3dc2ff;
+    color: #d95454;
+}
+
+.text-white {
+    color: white;
 }
