--- a/src/app/components/ricerca-piante/ricerca-piante.component.html
+++ b/src/app/components/ricerca-piante/ricerca-piante.component.html
@@ -16,8 +16,8 @@
 <ion-row>
   <ion-col>
     <ion-item>
-      <ion-checkbox [(ngModel)]="modelSearch.validoVasca" name="validoVasca" #validoVasca="ngModel"></ion-checkbox>
-      <ion-label classclass="ion-text-center">Valido per la vasca </ion-label>
+      <ion-checkbox [(ngModel)]="modelSearch.validoVasca" mode="md" name="validoVasca" #validoVasca="ngModel"></ion-checkbox>
+      <ion-label class="ion-text-start ion-padding-start">Valido per la vasca </ion-label>
     </ion-item>
   </ion-col>
 </ion-row>
