--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -27,7 +27,7 @@
     <ion-card-header class="ionCardHeader" color="primary">
       <ion-card-subtitle><ion-label>Misurazioni</ion-label></ion-card-subtitle>
     </ion-card-header>
-    <ion-card-content style="padding-bottom:0px;">
+    <ion-card-content style="padding: 5px 0px;">
       <!--PARAMETRI-->
       <div *ngIf="acquario.parameter!=null">
         <!-- SLIDER DEI PARAMETRI -->
