--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,14 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
+          
+          <ion-menu-toggle auto-hide="false" (click)="inviaEmail()">
+            <ion-item lines="none" detail="false">
+              <ion-icon slot="start" [ios]="'mail-outline'" [md]="'mail-sharp'"></ion-icon>
+              <ion-label>Invia una segnalazione</ion-label>
+            </ion-item> 
+          </ion-menu-toggle>  
+
           <ion-menu-toggle auto-hide="false" (click)="logout()">
             <ion-item lines="none" detail="false">
               <ion-icon slot="start" [ios]="'exit-outline'" [md]="'exit-sharp'" ></ion-icon>
