--- a/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
+++ b/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <!--ion-toolbar color="secondary"-->
-  <ion-toolbar color="primary">
+  <ion-toolbar color="secondary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
