--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -7,6 +7,11 @@
   transform: translateY(-50%);
 }
 
+.my-background {
+  min-width: 100%;
+  max-height: 50%;
+}
+
 .ripple-parent {
   position: relative;
   overflow: hidden;
