fix splash page

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -24,7 +24,7 @@
       <!-- Messaggio che non ci sono acquari -->
       <ion-card color="danger" class="align-item-center" *ngIf="!vascheservice.isLoading" [routerLink]="['/nuovo-acquario']">
         <ion-card-header>
-          <ion-card-subtitle>BENVENUTO IN MYAQUARIUM</ion-card-subtitle>
+          <ion-card-subtitle>BENVENUTO IN MYQUARIUM</ion-card-subtitle>
         </ion-card-header>
         <ion-card-content> Crea il tuo primo acquario </ion-card-content>
       </ion-card>
