--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -4,56 +4,11 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Dashboard
+      Start
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <img src="assets/img/dashboard1.jpg" />
-  <div class="container-center" *ngIf="array_vasche.length == 0 || getVascheService().isLoading">
-    <!-- Loading centrale -->
-    <ion-card class="align-item-center" *ngIf="getVascheService().isLoading">
-      <ion-card-header>
-        <ion-spinner></ion-spinner>
-      </ion-card-header>
-      <ion-card-content> Carico i tuoi acquari </ion-card-content>
-    </ion-card>
-    <!-- Messaggio che non ci sono acquari -->
-    <ion-card color="danger" class="align-item-center" *ngIf="!getVascheService().isLoading">
-      <ion-card-header>
-        <ion-card-subtitle>BENVENUTO IN MYAQUARIUM</ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content> Crea il tuo primo acquario </ion-card-content>
-    </ion-card>
-  </div>
-
-  <div class="container-center" *ngIf="array_vasche.length > 0 && !getVascheService().isLoading">
-    <!-- Tutte le vasche dell'utente -->
-    <ion-card *ngFor="let vasca of array_vasche" (click)="vascaOnclick(vasca)">
-      <div class="ion-activatable ripple-parent">
-        <ion-card-header>
-          <ion-card-subtitle>{{vasca.nome}}</ion-card-subtitle>
-        </ion-card-header>
-        <ion-card-content> 
-          {{vasca.descrizione}} <br>
-          <ion-grid>
-            <ion-row>
-              <ion-col><ion-label color="secondary" stacked><ion-icon name="fish"></ion-icon>{{vasca.fishs.length}} Pesci</ion-label></ion-col>
-              <ion-col><ion-label color="success" stacked><ion-icon name="leaf"></ion-icon>{{vasca.plants.length}} Piante</ion-label></ion-col>
-            </ion-row>
-          </ion-grid>
-        </ion-card-content>
-        <ion-ripple-effect></ion-ripple-effect>
-      </div>
-    </ion-card>
-  </div>
-  
+  Loading...
 </ion-content>
-
-
-<ion-fab horizontal="end" vertical="bottom" slot="fixed">
-  <ion-fab-button color="primary" class="ion-margin" [routerLink]="['/nuovo-acquario']">
-    <ion-icon name="add-outline"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
