--- a/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
+++ b/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-center">Definisci vasca</ion-title>
+    <ion-title>Crea una nuova vasca</ion-title>
   </ion-toolbar>
 </ion-header>
 
