fix grafici, aggiunta la pagina recupera password

--- a/src/app/components/ricerca-accessori/ricerca-accessori.component.html
+++ b/src/app/components/ricerca-accessori/ricerca-accessori.component.html
@@ -1,5 +1,5 @@
 <ion-toolbar color="secondary">
-    <ion-title class="ion-text-center"> Ricerca Accessori</ion-title>
+    <ion-title> Ricerca Accessori</ion-title>
 </ion-toolbar>
 <ion-searchbar></ion-searchbar>
 <ion-content>
