--- a/src/app/pages/misure-acquario/misure-acquario.page.html
+++ b/src/app/pages/misure-acquario/misure-acquario.page.html
@@ -301,14 +301,14 @@
                   <ion-label position="stacked" [color]="!misura_valore.valid && misura_valore.touched ? 'danger' : ''">Valore temperatura</ion-label>
                   <ion-input type="number" placeholder="Inserisci temperatura" [(ngModel)]="modelMisura.valore" required="true" #misura_valore="ngModel" name="misura_valore"></ion-input>
                 </ion-item>
-                <ion-item>
+                <!-- <ion-item>
                   <ion-label  [color]="!misura_unita.valid && misura_unita.touched ? 'danger' : ''">Unità di misura</ion-label>
                   <ion-select placeholder="Seleziona unità di misura" interface="popover" [(ngModel)]="modelMisura.unita" required="true" #misura_unita="ngModel" name="misura_unita">
                     <ion-select-option value="°C">*Celsius</ion-select-option>
                     <ion-select-option value="°F">°Fahrenheit</ion-select-option>
                     <ion-select-option value="°K">°Kelvin</ion-select-option>
                   </ion-select>
-                </ion-item>
+                </ion-item> -->
               </ion-col>
             </ion-row>
           </ion-grid>
