--- a/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
+++ b/src/app/pages/nuovo-acquario/nuovo-acquario.page.html
@@ -3,60 +3,57 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Crea una nuova vasca</ion-title>
+    <ion-title>Crea un nuovo acquario</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-subtitle>Inserisci i dati del tuo acquario</ion-card-subtitle>
-      <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating" >Nome</ion-label>
-            <ion-input [(ngModel)]="model.nome" minlength="5" maxlength="64" name="nome" #nome="ngModel" required></ion-input>
-          </ion-item>
-          <ion-list *ngIf="nome.dirty && nome.errors" lines="none">
-            <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
-          </ion-list>
+  <div class="logo">
+    <ion-img src="assets/img/logo-aquarium-clear.png"></ion-img>
+  </div>
+    <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
+      <ion-list>
+        <ion-item>
+          <ion-label position="floating" >Nome</ion-label>
+          <ion-input [(ngModel)]="model.nome" minlength="5" maxlength="64" name="nome" #nome="ngModel" required></ion-input>
+        </ion-item>
+        <ion-list *ngIf="nome.dirty && nome.errors" lines="none">
+          <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
         </ion-list>
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating" type="decimal">Capacità</ion-label>
-            <ion-input [(ngModel)]="model.volume" type="number"  min="0" step="any" name="volume" #volume="ngModel" required></ion-input>
-            <ion-icon name="cube-outline"slot="end" size="small" class="ion-align-self-end"></ion-icon>
-          </ion-item>
-          <ion-list *ngIf="volume.dirty && volume.errors" lines="none">
-            <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
-          </ion-list>
+      </ion-list>
+      <ion-list>
+        <ion-item>
+          <ion-label position="floating" type="decimal">Capacità</ion-label>
+          <ion-input [(ngModel)]="model.volume" type="number"  min="0" step="any" name="volume" #volume="ngModel" required></ion-input>
+          <ion-icon name="cube-outline"slot="end" size="small" class="ion-align-self-end"></ion-icon>
+        </ion-item>
+        <ion-list *ngIf="volume.dirty && volume.errors" lines="none">
+          <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
         </ion-list>
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating">Costo</ion-label>
-            <ion-input type="number" [(ngModel)]="model.costo" nin="0" step="any" name="costo"></ion-input>
-            <ion-icon name="logo-euro" slot="end" size="small" class="ion-align-self-end"></ion-icon>
-          </ion-item>
-        </ion-list>
-        <ion-list>
-          <ion-item>
-            <ion-label position="floating">Note</ion-label>
-            <ion-textarea [(ngModel)]="model.descrizione" maxlength="280" auto-grow="true" name="descrizione" #descrizione="ngModel"></ion-textarea>
-            <ion-icon name="clipboard-outline" slot="end" size="small" class="ion-align-self-end"></ion-icon>
-          </ion-item>
-        </ion-list>
-      </form>
-    </ion-card-header>
-  </ion-card>
+      </ion-list>
+      <ion-list>
+        <ion-item>
+          <ion-label position="floating">Costo</ion-label>
+          <ion-input type="number" [(ngModel)]="model.costo" nin="0" step="any" name="costo"></ion-input>
+          <ion-icon name="logo-euro" slot="end" size="small" class="ion-align-self-end"></ion-icon>
+        </ion-item>
+      </ion-list>
+      <ion-list>
+        <ion-item>
+          <ion-label position="floating">Note</ion-label>
+          <ion-textarea [(ngModel)]="model.descrizione" maxlength="280" auto-grow="true" name="descrizione" #descrizione="ngModel"></ion-textarea>
+          <ion-icon name="clipboard-outline" slot="end" size="small" class="ion-align-self-end"></ion-icon>
+        </ion-item>
+      </ion-list>
+    </form>
 </ion-content>
 
 <ion-footer class="ion-no-border">
   <ion-toolbar>
     <ion-row *ngIf="!editMode">
       <ion-col size="12" class="ion-text-center">
-        <ion-button expand="block" (click)="processForm(form)"
-          > 
-          Salva il tuo acquario e vai avanti
+        <ion-button size="large" expand="block" (click)="processForm(form)"> 
+          <span> Salva il tuo acquario</span>
         </ion-button>
       </ion-col>
     </ion-row>
