--- a/src/app/pages/recupero-password/recupero-password.page.html
+++ b/src/app/pages/recupero-password/recupero-password.page.html
@@ -3,24 +3,30 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title classclass="ion-text-center">Recupero-password</ion-title>
+    <ion-title>Recupera password</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-label position="floating" >Email*</ion-label>
-      <ion-input type="email" [(ngModel)]="model.email"  pattern="[A-Za-z0-9._%+-]{3,}@[a-zA-Z]{3,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})" maxlength="64" name="email" #email="ngModel" required></ion-input>
-    </ion-item>
-    <ion-list *ngIf="email.dirty && email.errors" lines="none">
-      <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+<ion-content color="secondary">
+  <div class="logo">
+    <ion-img src="assets/img/logo-aquarium-clear.png"></ion-img>
+  </div>
+  <form #form="ngForm" novalidate>
+    <ion-list class="secondary-color">
+      <ion-item color="secondary">
+        <ion-label position="floating" >Email*</ion-label>
+        <ion-input type="email" [(ngModel)]="model.email"  pattern="[A-Za-z0-9._%+-]{3,}@[a-zA-Z]{3,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})" maxlength="64" name="email" #email="ngModel" required></ion-input>
+      </ion-item>
+      <ion-list class="secondary-color" *ngIf="email.dirty && email.errors" lines="none">
+        <ion-text color="danger" class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
+      </ion-list>
     </ion-list>
-  </ion-list>
-  <!-- <ion-button size="default" (click)="processForm(form)">
-    Invia
-  </ion-button> -->
-  <ion-button>
-    Invia
-  </ion-button>
+    <ion-toolbar color="secondary" style="margin-top: 10px;">
+      <ion-row>
+        <ion-col size="12" class="ion-text-center">
+          <ion-button color="light" size="default" expand="block" (click)="processForm(form)">Invia</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-toolbar>
+  </form>
 </ion-content>
