--- a/src/app/pages/ricerca/ricerca.page.html
+++ b/src/app/pages/ricerca/ricerca.page.html
@@ -7,7 +7,7 @@
       <ion-icon size="large"  name="checkmark-outline"></ion-icon>
     </ion-button> -->
   
-   <ion-title class="ion-text-center">Ricerca {{appState.searchState}}</ion-title>
+   <ion-title>Ricerca {{appState.searchState}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
