--- a/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
+++ b/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
@@ -5,7 +5,7 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
 
-    <ion-title class="ion-text-center">Dettaglio</ion-title>
+    <ion-title>Dettaglio</ion-title>
     
     <ion-buttons slot="end">
       <ion-button  *ngIf="getAppstate().canDelete" (click)="deleteVivo()" expand="block">
