--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,7 @@ ion-text.helper-error {
     margin-top: -20px;
     font-size: small;
 }
+
+.MYionCardHeader {
+    padding-left: 10px;padding-right: 10px;padding-bottom: 7px; padding-top: 7px;
+}
