--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -31,16 +31,23 @@
         <ion-text class="ion-margin-start ion-margin-end">Questo campo è obbligatorio</ion-text>
       </ion-list>
     </ion-list>
-    <ion-toolbar color="secondary" style="margin-top: 60px;">
+    <ion-item  color="secondary" lines="none">
+      <ion-label>
+        <p class="item-paragraph-full">
+          <a class="text-white" routerLink='/recupero-password'>Password dimenticata?</a> 
+        </p>
+      </ion-label>
+    </ion-item> 
+    <ion-toolbar color="secondary" style="margin-top: 10px;">
       <ion-row>
         <ion-col size="12" class="ion-text-center">
           <ion-button color="light" size="default" expand="block" (click)="processForm(form)">LOGIN</ion-button>
         </ion-col>
       </ion-row>
     </ion-toolbar>
-    
   </form>
-  <ion-item color="secondary">
+
+  <ion-item lines="none" color="secondary">
     <ion-label>
       <p class="item-paragraph-full">
         Se non hai un account, per favore <a class="text-white" routerLink='/registrazione-utente'>Clicca qui!</a> 
