--- a/src/app/components/ricerca-pesce/ricerca-pesce.component.html
+++ b/src/app/components/ricerca-pesce/ricerca-pesce.component.html
@@ -1,11 +1,11 @@
-<form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
+<form #form="ngForm" (ngSubmit)="processForm()" novalidate>
 
   <!--CAMPI UTILI PER LA RICERCA-->
   <ion-row>
     <ion-col>
       <ion-item>
         <ion-label position="stacked" [color]="!pesce_commonname.valid && pesce_commonname.touched ? 'danger' : ''">Nome pesce</ion-label>
-        <ion-input placeholder="utilizza il suo nome comune" [(ngModel)]="modelSearch.nomePesce" required="true" minlength="3" #pesce_commonname="ngModel" name="pesce_commonname"></ion-input>
+        <ion-input #searchInput placeholder="utilizza il suo nome comune" [(ngModel)]="modelSearch.nomePesce" required="true" minlength="3" #pesce_commonname="ngModel" name="pesce_commonname"></ion-input>
       </ion-item>
       <span class="ion-padding" *ngIf="!pesce_commonname.valid && pesce_commonname.touched">
         <ion-text class="helper-error" color="danger">Inserisci il nome con almeno 3 lettere</ion-text>
