--- a/src/app/components/ricerca-piante/ricerca-piante.component.html
+++ b/src/app/components/ricerca-piante/ricerca-piante.component.html
@@ -77,10 +77,10 @@
           <ion-badge *ngIf="!piante.khAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">KH</ion-badge>
           <ion-badge *ngIf="piante.khAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">KH</ion-badge>
           
-          <!--BADGE HEIGHT -->
+          <!--BADGE HEIGHT 
           <ion-badge *ngIf="!piante.heightAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Altezza</ion-badge>
           <ion-badge *ngIf="piante.heightAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Altezza</ion-badge>
-
+          -->
           <!--BADGE TEMPERATURE -->
           <ion-badge *ngIf="!piante.temperatureAlert" color="success" slot="end" style="margin: 0px 5px 0px 0px;">Temperatura</ion-badge>
           <ion-badge *ngIf="piante.temperatureAlert" color="danger" slot="end" style="margin: 0px 5px 0px 0px;">Temperatura</ion-badge>
