--- a/src/app/components/scheda-piante/scheda-piante.component.html
+++ b/src/app/components/scheda-piante/scheda-piante.component.html
@@ -76,7 +76,7 @@
         </ion-col>
         <ion-col size="6">
           <ion-label>Altezza massima</ion-label><br>
-          <span class="item-paragraph-size-lg">{{piante.maxHeight}} litri</span>
+          <span class="item-paragraph-size-lg">{{piante.maxHeight}} cm</span>
         </ion-col>
       </ion-row>
       <ion-item-divider class="item-divider"></ion-item-divider>
